# bsse-graphics

./: .gitignore
homework1/: CMakeLists.txt
homework1/src/: gl_objects.h  main.cpp  shaders.h
homework2/: CMakeLists.txt
homework2/src/: camera.h  gl_objects.h  main.cpp  render.h  scene.h  shaders.h
practice1/: main.cpp
practice13/: main.cpp
practice2/: main.cpp
practice3/: main.cpp
practice4/: main.cpp
practice5/: main.cpp
practice6/: main.cpp
